generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model User {
  id               String         @id @default(uuid())
  userName         String         @unique
  password_hash    String
  firstName        String
  email            String         @unique
  created_at       DateTime       @default(now())
  role             Role           @default(USER)
  updated_at       DateTime       @updatedAt
  is_deleted       Boolean        @default(false)
  deleted_at       DateTime?
  is_blocked       Boolean        @default(false)
  blocked_at       DateTime?
  blockedById      String?
  deletedById      String?
  lastName         String
  updatedById      String?
  createdChapters  Chapter[]      @relation("ChapterCreatedBy")
  deletedChapters  Chapter[]      @relation("ChapterDeletedBy")
  updatedChapters  Chapter[]      @relation("ChapterUpdatedBy")
  createdContents  Content[]      @relation("ContentCreatedBy")
  updatedContents  Content[]      @relation("ContentUpdatedBy")
  createdCourses   Course[]       @relation("CourseCreatedBy")
  deletedCourses   Course[]       @relation("CourseDeletedBy")
  updatedCourses   Course[]       @relation("CourseUpdatedBy")
  enrollments      Enrollment[]
  blocked_by       User?          @relation("UserBlockedBy", fields: [blockedById], references: [id])
  blockedUsers     User[]         @relation("UserBlockedBy")
  deleted_by       User?          @relation("UserDeletedBy", fields: [deletedById], references: [id])
  deletedUsers     User[]         @relation("UserDeletedBy")
  updated_by       User?          @relation("UserUpdatedBy", fields: [updatedById], references: [id])
  updatedUsers     User[]         @relation("UserUpdatedBy")
  workshops        UserWorkshop[]
  createdWorkshops Workshop[]     @relation("WorkshopCreatedBy")
  deletedWorkshops Workshop[]     @relation("WorkshopDeletedBy")
  updatedWorkshops Workshop[]     @relation("WorkshopUpdatedBy")
}

model Course {
  id          String       @id @default(uuid())
  name        String       @unique
  created_at  DateTime     @default(now())
  createdById String?
  updated_at  DateTime     @updatedAt
  updatedById String?
  is_deleted  Boolean      @default(false)
  deleted_at  DateTime?
  deletedById String?
  chapters    Chapter[]
  created_by  User?        @relation("CourseCreatedBy", fields: [createdById], references: [id])
  deleted_by  User?        @relation("CourseDeletedBy", fields: [deletedById], references: [id])
  updated_by  User?        @relation("CourseUpdatedBy", fields: [updatedById], references: [id])
  enrollments Enrollment[]
}

model Workshop {
  id               String         @id @default(uuid())
  name             String         @unique
  theme            String?
  description      String?
  start_date       DateTime
  created_at       DateTime       @default(now())
  createdById      String?
  updated_at       DateTime       @updatedAt
  updatedById      String?
  is_deleted       Boolean        @default(false)
  deleted_at       DateTime?
  deletedById      String?
  end_date         DateTime?
  max_participants Int?
  participants     UserWorkshop[]
  created_by       User?          @relation("WorkshopCreatedBy", fields: [createdById], references: [id])
  deleted_by       User?          @relation("WorkshopDeletedBy", fields: [deletedById], references: [id])
  updated_by       User?          @relation("WorkshopUpdatedBy", fields: [updatedById], references: [id])
}

model Chapter {
  id           String    @id @default(uuid())
  title        String
  order_index  Float     @default(0)
  is_published Boolean   @default(false)
  created_at   DateTime  @default(now())
  updated_at   DateTime  @updatedAt
  is_deleted   Boolean   @default(false)
  deleted_at   DateTime?
  courseId     String
  parentId     String?
  createdById  String
  updatedById  String?
  deletedById  String?
  course       Course    @relation(fields: [courseId], references: [id])
  created_by   User      @relation("ChapterCreatedBy", fields: [createdById], references: [id])
  deleted_by   User?     @relation("ChapterDeletedBy", fields: [deletedById], references: [id])
  parent       Chapter?  @relation("ChapterChildren", fields: [parentId], references: [id])
  children     Chapter[] @relation("ChapterChildren")
  updated_by   User?     @relation("ChapterUpdatedBy", fields: [updatedById], references: [id])
  contents     Content[]
}

model Content {
  id           String      @id @default(uuid())
  content_type ContentType
  title        String?
  body         String?
  media_url    String?
  order_index  Float       @default(0)
  is_published Boolean     @default(false)
  created_at   DateTime    @default(now())
  updated_at   DateTime    @updatedAt
  is_deleted   Boolean     @default(false)
  deleted_at   DateTime?
  chapterId    String
  createdById  String
  updatedById  String?
  chapter      Chapter     @relation(fields: [chapterId], references: [id])
  created_by   User        @relation("ContentCreatedBy", fields: [createdById], references: [id])
  updated_by   User?       @relation("ContentUpdatedBy", fields: [updatedById], references: [id])
}

model Enrollment {
  userId       String
  courseId     String
  enrolled_at  DateTime  @default(now())
  has_paid     Boolean   @default(false)
  progress     Int       @default(0)
  completed_at DateTime?
  course       Course    @relation(fields: [courseId], references: [id])
  user         User      @relation(fields: [userId], references: [id])

  @@id([userId, courseId])
}

model UserWorkshop {
  userId        String
  workshopId    String
  registered_at DateTime @default(now())
  attended      Boolean  @default(false)
  user          User     @relation(fields: [userId], references: [id])
  workshop      Workshop @relation(fields: [workshopId], references: [id])

  @@id([userId, workshopId])
}

enum Role {
  USER
  STUDENT
  TEACHER
  ADMIN
}

enum ContentType {
  HEADING
  PARAGRAPH
  VIDEO
  IMAGE
  FILE
  LIST
  CODE
  QUIZ
}
