@startuml
hide circle
skinparam linetype ortho

entity "User" as user {
  * id : UUID <<PK>>
  --
  user_name : VARCHAR(50) <<UNIQUE>>
  first_name : VARCHAR(50)
  last_name : VARCHAR(50)
  email : VARCHAR(100) <<UNIQUE>>
  phone : VARCHAR(20) NULL
  password_hash : VARCHAR(255)
  role : ENUM('user','student','admin')
  created_at : TIMESTAMP
  created_by_id : UUID <<FK, NULL>>
  updated_at : TIMESTAMP
  updated_by_id : UUID <<FK, NULL>>
  is_deleted : BOOLEAN
  deleted_at : TIMESTAMP NULL
  deleted_by_id : UUID <<FK, NULL>>
  is_blocked : BOOLEAN
  blocked_at : TIMESTAMP NULL
  blocked_by_id : UUID <<FK, NULL>>
}

entity "Course" as course {
  * id : UUID <<PK>>
  --
  title : VARCHAR
  description : TEXT
  created_at : TIMESTAMP
  created_by_id : UUID <<FK, NULL>>
  updated_at : TIMESTAMP
  updated_by_id : UUID <<FK, NULL>>
  is_deleted : BOOLEAN
  deleted_at : TIMESTAMP NULL
  deleted_by_id : UUID <<FK, NULL>>
}

entity "Enrollment" as enrollment {
  * id : UUID <<PK>>
  --
  user_id : UUID <<FK>>
  course_id : UUID <<FK>>
  enrolled_at : TIMESTAMP
  payment_status : ENUM('pending','paid','failed','refunded')
  progress : INTEGER
  completed_at : TIMESTAMP NULL
}

entity "Chapter" as chapter {
  * id : UUID <<PK>>
  --
  course_id : UUID <<FK>>
  parent_id : UUID <<FK, NULL>>
  title : VARCHAR
  position : INTEGER
  is_published : BOOLEAN
  created_at : TIMESTAMP
  created_by_id : UUID <<FK, NULL>>
  updated_at : TIMESTAMP
  updated_by_id : UUID <<FK, NULL>>
  is_deleted : BOOLEAN
  deleted_at : TIMESTAMP NULL
  deleted_by_id : UUID <<FK, NULL>>
}

entity "Content" as content {
  * id : UUID <<PK>>
  --
  chapter_id : UUID <<FK>>
  content_type : ENUM('heading','paragraph','video','image','file','list','code','quiz')
  title : VARCHAR NULL
  body : TEXT / JSON NULL
  media_url : VARCHAR NULL
  position : INTEGER
  is_published : BOOLEAN
  created_at : TIMESTAMP
  created_by_id : UUID <<FK, NULL>>
  updated_at : TIMESTAMP
  updated_by_id : UUID <<FK, NULL>>
  deleted_at : TIMESTAMP NULL
  deleted_by_id : UUID <<FK, NULL>>
}

entity "Workshop" as workshop {
  * id : UUID <<PK>>
  --
  title : VARCHAR
  theme : VARCHAR NULL
  description : TEXT
  max_participants : INTEGER NULL
  start_date : TIMESTAMP
  end_date : TIMESTAMP
  created_at : TIMESTAMP
  created_by_id : UUID <<FK, NULL>>
  updated_at : TIMESTAMP
  updated_by_id : UUID <<FK, NULL>>
  is_deleted : BOOLEAN
  deleted_at : TIMESTAMP NULL
  deleted_by_id : UUID <<FK, NULL>>
}

entity "User_Workshop" as user_workshop {
  * id : UUID <<PK>>
  --
  user_id : UUID <<FK>>
  workshop_id : UUID <<FK>>
  registered_at : TIMESTAMP
  attended : BOOLEAN
}

user ||--o{ enrollment
course ||--o{ enrollment

course ||--o{ chapter
chapter ||--o{ chapter : parent_id
chapter ||--o{ content

user ||--o{ user_workshop
workshop ||--o{ user_workshop

user ||--o{ course : created_by
user ||--o{ chapter : created_by
user ||--o{ content : created_by
user ||--o{ workshop : created_by
user ||--o{ chapter : updated_by
user ||--o{ content : updated_by
user ||--o{ workshop : updated_by
user ||--o{ chapter : deleted_by
user ||--o{ content : deleted_by
user ||--o{ workshop : deleted_by

@enduml